# backend/domain/src/main/java/ch/jaunerc/tichu/backend/domain/game/model/TichuCall.java
@@ -1,5 +1,5 @@
 package ch.jaunerc.tichu.backend.domain.game.model;
 
 public enum TichuCall {
-    GRAND, SMALL, NONE, NOT_ANSWERED
+    GRAND, SMALL, NONE
 }
