# backend/input-websocket/src/main/java/ch/jaunerc/tichu/backend/websocket/converter/TichuCallDtoConverter.java
@@ -6,23 +6,16 @@ import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
 
 @AllArgsConstructor(access = AccessLevel.PRIVATE)
-public final class TichuCallDtoConverter {
+public class TichuCallDtoConverter {
 
-    public static TichuCall toDomain(TichuCallDto dto) {
-        return switch (dto) {
-            case NOT_ANSWERED -> TichuCall.NOT_ANSWERED;
-            case GRAND -> TichuCall.GRAND;
-            case SMALL -> TichuCall.SMALL;
-            case NONE -> TichuCall.NONE;
-        };
-    }
-
-    public static TichuCallDto toDto(TichuCall tichuCall) {
+    public static TichuCallDto convert(TichuCall tichuCall) {
+        if (tichuCall == null) {
+            return null;
+        }
         return switch (tichuCall) {
             case GRAND -> TichuCallDto.GRAND;
             case SMALL -> TichuCallDto.SMALL;
             case NONE -> TichuCallDto.NONE;
-            case NOT_ANSWERED -> TichuCallDto.NOT_ANSWERED;
         };
     }
 }
